[tool.poetry]
name = "repl_nix_ChatGPT-Line-Bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
youtube-transcript-api = "^0.6.1"
bs4 = "^0.0.1"
Flask = "^2.3.3"
line-bot-sdk = "^3.3.0"
OpenCC = "^1.1.6"
pymongo = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
